# rules-ts-transitive-deps

./: .swcrc  BUILD.bazel  README.md  WORKSPACE  js_image_layer.bzl  main.ts  package.json  pnpm-lock.yaml  rules_ts.patch  tsconfig.json
lib1/: BUILD.bazel  index.ts
lib2/: BUILD.bazel  index.ts
