load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//lib:partial.bzl", "partial")

ts_project(
    name = "lib1_project",
    srcs = ["index.ts"],
    composite = True,
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:swcrc",
    ),
    tsconfig = "//:tsconfig",
    deps = ["//:node_modules/@org/lib2"],
)

npm_package(
    name = "lib1",
    srcs = [":lib1_project"],
    package = "@org/lib1",
    visibility = ["//visibility:public"],
)
