load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//lib:partial.bzl", "partial")

deps = ["//:node_modules/@faker-js/faker"]

ts_project(
    name = "lib2_project",
    srcs = ["index.ts"],
    composite = True,
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:swcrc",
    ),
    tsconfig = "//:tsconfig",
    deps = deps,
)

npm_package(
    name = "lib2",
    srcs = [":lib2_project"],
    data = deps,
    package = "@org/lib2",
    visibility = ["//visibility:public"],
)
